[Update] Spec
